Package_Tools/include-C/ImageMagick-6/magick/in_arbeiit/fertig/policy.h

/*
  Copyright 1999 ImageMagick Studio LLC, a non-profit organization
  dedicated to making software imaging solutions freely available.
  
  You may not use this file except in compliance with the License.  You may
  obtain a copy of the License at
  
    https://imagemagick.org/script/license.php
  
  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.

  MagickCore security policy methods.
*/
#ifndef MAGICKCORE_POLICY_H
#define MAGICKCORE_POLICY_H

#include "magick/pixel.h"
#include "magick/exception.h"


typedef enum
{
  UndefinedPolicyDomain,
  CoderPolicyDomain,
  DelegatePolicyDomain,
  FilterPolicyDomain,
  PathPolicyDomain,
  ResourcePolicyDomain,
  SystemPolicyDomain,
  CachePolicyDomain,
  ModulePolicyDomain
} PolicyDomain;

typedef enum
{
  UndefinedPolicyRights = 0x00,
  NoPolicyRights = 0x00,
  ReadPolicyRights = 0x01,
  WritePolicyRights = 0x02,
  ExecutePolicyRights = 0x04,
  AllPolicyRights = 0xff
} PolicyRights;

typedef struct _PolicyInfo
  PolicyInfo;

extern  char
  *GetPolicyValue(const char *name);
extern  char
  **GetPolicyList(const char *,size_t *,ExceptionInfo *);

extern  const PolicyInfo
  **GetPolicyInfoList(const char *,size_t *,ExceptionInfo *);

extern  MagickBooleanType
  IsRightsAuthorized(const PolicyDomain,const PolicyRights,const char *);
extern  MagickBooleanType
  ListPolicyInfo(FILE *,ExceptionInfo *);
extern  MagickBooleanType
  PolicyComponentGenesis(void);
extern  MagickBooleanType
  SetMagickSecurityPolicy(const char *,ExceptionInfo *);

extern  void
  PolicyComponentTerminus(void);